<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DEFINITIVA"
        android:textSize="50dp"
        android:layout_gravity="center"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

             <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70px"
                android:textSize="30dp"
                android:text="@string/quices"
                android:textColor="@color/red"/>

              <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70px"
                android:hint="@string/msg1"
                android:textSize="20dp"
                android:id="@+id/iquices"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:layout_marginTop="70px"
            android:textColor="@color/red"
            android:text="@string/exposiciones"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/msg1"
            android:textSize="20dp"
            android:layout_marginTop="70px"
            android:id="@+id/iexposiciones"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="30dp"
            android:layout_marginTop="70px"
            android:text="@string/practicas"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/msg1"
            android:textSize="20dp"
            android:layout_marginTop="70px"
            android:id="@+id/ipracticas"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:layout_marginTop="70px"
            android:textColor="@color/red"
            android:text="@string/proyecto"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/msg1"
            android:textSize="20dp"
            android:layout_marginTop="70px"
            android:id="@+id/iproyecto"/>

    </LinearLayout>


    <Button
        android:layout_marginTop="30px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:layout_gravity="center"
        android:id="@+id/Bcalcular"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200px"
        android:layout_marginTop="60px"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:text="@string/notadef"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint=""
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="60px"
        android:layout_marginLeft="40px"
        android:id="@+id/inotadef"/>
    </LinearLayout>

</LinearLayout>